Fix word-wrap

--- a/src/components/Leaderboard/Result.css
+++ b/src/components/Leaderboard/Result.css
@@ -1,3 +1,8 @@
 .Leaderboard .Result .Header {
     font-weight: bold;
 }
+
+.Leaderboard .Result .item-name {
+    word-wrap: break-word;
+}
+
